    * Added ability to guess tags from whole track path. (TagGuesser dialog)
    * Use KDirWatch to watch changes to collection.
    * Do always store track rating as tags in files. Patch by Alan Ezusti
      <alan.ezust@gmail.com>. (BR 259117)
    * Added missing tooltip for animation settings. Patch by Bhargav Mangipudi
      <bhargav.1191@gmail.com>. (BR 248690)

  BUGFIXES:
    * Fixed linking on Solaris 11 (and others?). (BR 264112)
    * Fixed temporary podcast download filenames that were to long by using MD5 hash instead.
      Thanks to Frank Steinmetzger for the patch. (BR 264813)
    * Fixed issue with absentee toolbar on clear run (without config files). (BR 259615)
    * Fixed CD copying functionality. (BR 264050)
    * Fixed CUE tracks playback order. (BR 263237)
    * Prevent crash on exit when using Phonon-VLC.
    * Fixed crash in the queue editor when trying to show already
      removed items of the playlist. (BR 263308)
    * Fixed Mute button. (BR 253098)
    * Fixed issue with Organize collection, which made amarok remove newly copied tracks.
      (BR 263301)
    * Fixed wrong "Configure amarok" action position in tray icon popup menu. (BR 263330)
    * Fixed minor inconsistency in the Collection view. Patch by 
      Bhargav Mangipudi <bhargav.1191@gmail.com>. (BR 260973)
    * Fixed potential crash with the Similar Artists applet. Thanks to 
      Tuomas Nurmi <tuomas@norsumanageri.org> for the patch. (BR 263145)
    * Fixed 'Scale Font' option in OSD options for OSD preview widget.
      (BR 254029)
    * Fixed issue with playlist tooltips that was shown independetly from
      "Show tooltip" option. (BR 263121)
    * Fixed issues with multifiles cuesheet, when all tracks get metadata of
      last track
      in cuesheet, and each file defined in sheet gets all tracks of this sheet.
      (BR 262668) (BR 209341)
    * Fixed crash when trying to download a full size cover and the server
      redirects the request. (BR 262902)